# pyspark-bigdata-course

aggregating-dataframes/: Aggregating_DataFrames_in_PySpark_HW.ipynb  aggregating-dataset.ipynb
dataframes-fundamentals/aggregating-dataframes/: README.md  pyproject.toml
dataframes-fundamentals/dataset_basic_operations/: .gitignore  README.md  Read_Write_and_Validate_Data_HW.ipynb
dataframes-fundamentals/dataset_search_filter/: README.md  Search and Filter DataFrames in PySpark-HW.ipynb  search_filter.ipynb
dataframes-fundamentals/handling-missing-data/: Handling_Missing_Data_in_PySpark_HW.ipynb  README.md  handling-missing-data.ipynb  pyproject.toml
dataframes-fundamentals/joining-dataframes/: README.md
dataframes-fundamentals/manipulating-dataframe/: Manipulating_Data_in_DataFrames_HW.ipynb  README.md  pyproject.toml
dataframes-fundamentals/spark-sql-options/: SQL_Options_in_Spark_HW.ipynb
dataset_basic_operations/: .gitignore  Read_Write_and_Validate_Data_HW.ipynb  dataset_operations.ipynb  pyproject.toml
dataset_search_filter/: pyproject.toml
joining-dataframes/: Joining_and_Appending_DataFrames_in_PySpark_HW.ipynb
manipulating-dataframe/: .gitignore  Manipulating_Data_in_DataFrames_HW.ipynb  README.md  manipulate-dataset.ipynb
spark-sql-options/: README.md  pyproject.toml  sql-option.ipynb
