[tool.poetry]
name = "spark-sql-options"
version = "0.1.0"
description = ""
authors = ["Gabriel Soares Campanário <gabriel.camp96@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pyspark = "^3.2.1"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
